Set up page content templates

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,11 @@ Options All -Indexes
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)/$ $1 [L,R=301]
 	
+	#Redirect To Template
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
+	
 	#Remove PHP Extension
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^([^.]+)$ $1.php [NC,L]
