--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 admin/template.php
-includes/settings.php
+#includes/settings.php
 includes/templates/*
 !includes/templates/.gitkeep
 node_modules/
