--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "clover-cms",
-  "version": "1.0.0",
-  "description": "A simple CMS",
-  "main": "index.js",
+  "version": "0.9.0",
+  "description": "A simple php CMS built with bootstrap.",
+  "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
